# work

./: redme.txt
camre_capture_by_frame/: CMakeLists.txt  README.md
camre_capture_by_frame/log/: everyday.txt  log.txt  login.txt
camre_capture_by_frame/sh/: boot.sh  camboot.sh  dirname.sh  everyday.sh  flush.sh  timeout.sh  watcha.sh  watchp.sh
camre_capture_by_frame/src/: SqQueue.cpp  SqQueue.hpp  cam_cap.cpp  cam_cap.hpp  functions.cpp
cdemo/: CMakeLists.txt  demo.cpp
doc/: dhcpcd.conf  doxy.txt  fstab  rc.local  var_spool_cron_crontabs_root  wpa_supplicant.conf
mjpg-streamer-master/mjpg-streamer-experimental/: mjpg_streamer
mjpg-streamer-master/mjpg-streamer-experimental/_build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
mjpg-streamer-master/mjpg-streamer-experimental/_build/plugins/input_file/: Makefile  cmake_install.cmake
mjpg-streamer-master/mjpg-streamer-experimental/_build/plugins/input_http/: Makefile  cmake_install.cmake
mjpg-streamer-master/mjpg-streamer-experimental/_build/plugins/input_opencv/: Makefile  cmake_install.cmake
mjpg-streamer-master/mjpg-streamer-experimental/_build/plugins/input_ptp2/: Makefile  cmake_install.cmake
mjpg-streamer-master/mjpg-streamer-experimental/_build/plugins/input_raspicam/: Makefile  cmake_install.cmake
mjpg-streamer-master/mjpg-streamer-experimental/_build/plugins/input_uvc/: Makefile  cmake_install.cmake
mjpg-streamer-master/mjpg-streamer-experimental/_build/plugins/output_file/: Makefile  cmake_install.cmake
mjpg-streamer-master/mjpg-streamer-experimental/plugins/input_opencv/: input_opencv.cpp
nat123/: Settings.ini  nat123linux.sh
nat123/ConfigFileValue/: encodeInfo.ec  hardId.txt  lastUserName.txt  thisdevNum.txt  www.baidu.com.txt
open_camera_demo/: CMakeLists.txt  camboot.sh  dirname.sh  opencv_test.cpp
save_camre_to_video/: CMakeLists.txt  save_cam.cpp
(+14 files in other folders)
